--- a/openwrt/package/utils/asensor/src/Makefile
+++ b/openwrt/package/utils/asensor/src/Makefile
@@ -1,6 +1,6 @@
 all: compile 
 
-compile: beep_gpio measure_bmp180 measure_dht11 measure_dht22 measure_analog lcd1602 measure_pcf8591 measure_bh1750fvi milisleep     # measure_bh1750fvi
+compile: beep_gpio measure_bmp180 measure_dht11 measure_dht22 measure_analog measure_pcf8591 measure_bh1750fvi milisleep   
 
 beep_gpio:
 	$(CC)   $(CFLAGS) $(OBJECTS) -o beep_gpio $(LDFLAGS) beep_gpio.c
@@ -29,27 +29,11 @@ measure_pcf8591:
        
 lcd1602_c: LiquidCrystal_I2C 
 	$(CXX) $(CXXFLAGS) -o lcd1602.o -c lcd1602.c   # -li2c 
-                  
-arduinoPrint:   
-	$(CXX) -g -O $(CXXFLAGS) -o print.o  -c LiquidCrystal_I2C/Print.cpp 
-                                                                 
-I2CIO:   
-	$(CXX) -g -O $(CXXFLAGS) -o I2CIO.o  -c LiquidCrystal_I2C/I2CIO.cpp  
-                                               
-LCD:   
-	$(CXX) -g -O $(CXXFLAGS) -o LCD.o  -c LiquidCrystal_I2C/LCD.cpp  
-	
-LiquidCrystal_I2C: I2CIO LCD arduinoPrint   
-	$(CXX) -g -O $(CXXFLAGS) -o LiquidCrystal_I2C.o  -c LiquidCrystal_I2C/LiquidCrystal_I2C.cpp  
      
-            
-lcd1602: lcd1602_c
-	$(CXX) -g $(LDFLAGS) -o lcd1602 print.o I2CIO.o LCD.o LiquidCrystal_I2C.o lcd1602.o
-               
-   
+
 
 clean: 
-	@\rm -Rf beep_gpio 	*.o milisleep measure_bmp180 measure_bh1750fvi lcd1602
+	@\rm -Rf *.o  beep_gpio measure_bmp180 measure_dht11 measure_dht22 measure_analog measure_pcf8591 measure_bh1750fvi milisleep
 	@echo "Clean complete."
 	
 run:
