--- a/openwrt/package/utils/asensor/Makefile
+++ b/openwrt/package/utils/asensor/Makefile
@@ -1,19 +1,18 @@
 #
-# Copyright (C) 2014 OpenWrt.org
+# Makefile for OpenWRT package alcd
+# created by Adam Benda
+# based on default OpenWRT Makefile
 #
-# This is free software, licensed under the GNU General Public License v2.
-# See /LICENSE for more information.
-#
+
 
 include $(TOPDIR)/rules.mk
                           
 PKG_NAME:=asensor
-PKG_VERSION:=0.046
+PKG_VERSION:=0.5
 PKG_RELEASE:=1
 
-PKG_LICENSE:=GPL-3.0
+PKG_LICENSE:=MIT
 
-#include $(INCLUDE_DIR)/uclibc++.mk
 include $(INCLUDE_DIR)/package.mk
 
 define Package/asensor
@@ -23,10 +22,6 @@ define Package/asensor
   TITLE:=asensor
   DEPENDS:=+i2c-tools +libstdcpp 
 endef
-             # +libi2c
-             #+uclibcxx +libc +libstdcpp +uclibcxx +uclibc++
-             # +libc +libstdc++   +uclibc++   +uclibc 
-             
              
 define Package/asensor/description
  Asensor is set of programs used to read measurements from different sensors.
@@ -46,8 +41,7 @@ define Package/asensor/install
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/measure_dht11 $(1)/sbin/      
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/measure_dht22 $(1)/sbin/    
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/measure_bh1750fvi $(1)/sbin/   
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/measure_analog $(1)/sbin/     
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/lcd1602 $(1)/sbin/          
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/measure_analog $(1)/sbin/    
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/measure_pcf8591 $(1)/sbin/     
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/milisleep $(1)/sbin/          
 	$(INSTALL_BIN) $(PKG_BUILD_DIR)/measure_dalas.sh $(1)/sbin/measure_dalas
